# self-consistent-field

./: .gitignore  Cargo.toml  molecule.json  sto-3g.json
csv/: users.csv
src/: basis_set.rs  gaussian.rs  hartree_fock.rs  main.rs  molecule.rs  orbital.rs
