[package]
name = "self-consistent-field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.140"
dotenv = "0.15.0"
serde_json = "1.0.82"
eigenvalues = "0.4.0"
nalgebra = {version = "0.31.0", default-features = false, features = ["serde-serialize", "std"] }
