[package]
name = "self-consistent-field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.31.1", default-features = false, features = ["serde-serialize", "std"] }
serde = "1.0.140"
dotenv = "0.15.0"
serde_json = "1.0.82"
derive_more = "0.99.0"
statrs = "0.8.0"
num = "0.4.0"
