[package]
name = "self-consistent-field"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.31.1", default-features = false, features = ["serde-serialize", "std"] }
serde = "1.0.140"
dotenv = "0.15.0"
serde_json = "1.0.82"
derive_more = "0.99.0"
fastapprox = "0.3.0"
num = "0.4.0"
ndarray = "0.15.6"

[dependencies.serde_with]
version = "2.0.0"
